resolve comments from @eric-maynard and @snazy